Tela da home quase pronto
Tela da home com todas as informações, mas com um css xulo

--- a/estilo.css
+++ b/estilo.css
@@ -3,9 +3,8 @@ body {
     align-content: center;
 }
 
-hr {
-    color: blue;
-    height: 50px;
+div {
+    text-align: center;
 }
 
 .espaco-direita {
