Integração com banco dados e criação do html do users Banco de dados tanto inserção e seleção foram integrados

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,8 @@
         <div class="link">
             <a href="/">HOME</a>|
             <a href="./quemSomos">Quem-Somos</a>|
-            <a href="./contato">Contato</a>
+            <a href="./contato">Contato</a>|
+            <a href="./user">Usuários</a>
         </div>
 
     </div>
