--- a/templates/contato.html
+++ b/templates/contato.html
@@ -11,13 +11,14 @@
 
 <!--EMAIL-->
 <div>
-    <form>
+    <form method="post" action="/contato">
         Seu Email: <br>
-        <input type="text" name="Email"><br>
+        <input type="text" name="email"><br>
         Assunto: <br>
-        <input type="text" name="Assunto"><br>
+        <input type="text" name="assunto"><br>
         Descrição: <br>
-        <input type="text" name="Descrição"><br>
+        <input type="text" name="descricao"><br>
+        <button type="submit" value="enviar">Enviar</button>
     </form>
 </div>
 
