--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>UNES</title>
     <link rel="stylesheet" href="../static/css/normalize.css">
     <link rel="stylesheet" href="../static/css/estilo.css">
 </head>
@@ -26,6 +26,11 @@
     {% block repetidos %}
 
     {% endblock %}
+
+    <!-- RODAPÉ -->
+    <div class="centralizar">
+        <b>Todos os direitos reservados</b>
+    </div>
 
 </body>
 
