--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="espaco">
-        <img src="../static/img/logo.png" alt="LOGO">
+        <img src="../static/img/logo.png" alt="LOGO" id="Logo">
 
         <div class="link">
             <a href="/">HOME</a> |
