--- a/templates/user.html
+++ b/templates/user.html
@@ -2,22 +2,22 @@
 {% block repetidos %}
 
 <!-- USUARIO -->
-<thead>
-    <tr>
-        <th>E-mail</th>
-        <th>Assunto</th>
-        <th>Descrição</th>
-    </tr>
-</thead>
-
-<table>
-    {% for user in userDetails %}
-    <tr>
-        <th>{{user[0]}}</th>
-        <th>{{user[1]}}</th>
-        <th>{{user[2]}}</th>
-    </tr>
-    {% endfor %}
-</table>
-
+<div id="Tabela">
+    <table>
+        <thead>
+            <tr>
+                <th>E-mail</th>
+                <th>Assunto</th>
+                <th>Descrição</th>
+            </tr>
+        </thead>
+        {% for user in userDetails %}
+        <tr>
+            <th>{{user[0]}}</th>
+            <th>{{user[1]}}</th>
+            <th>{{user[2]}}</th>
+        </tr>
+        {% endfor %}
+    </table>
+</div>
 {% endblock %}
