--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -23,7 +23,7 @@ table {
 }
 
 thead tr {
-    font-size: 5vw;
+    font-size: 30px;
 }
 
 th {
@@ -32,7 +32,7 @@ th {
 
 tr {
     border: 3px solid;
-    font-size: 3vw;
+    font-size: 15px;
 }
 
 /*---------------------------
