--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="espaco">
+    <div class="header">
         <img src="../static/img/logo.png" alt="LOGO" id="Logo">
 
         <div class="link">
