--- a/templates/contato.html
+++ b/templates/contato.html
@@ -11,14 +11,16 @@
 
 <!--EMAIL-->
 <div>
-    <form method="post" action="/contato">
-        Seu Email: <br>
-        <input type="text" name="email"><br>
-        Assunto: <br>
-        <input type="text" name="assunto"><br>
-        Descrição: <br>
-        <input type="text" name="descricao"><br>
-        <button type="submit" value="enviar">Enviar</button>
+    <form method="post" action="/contato" class="quest">
+        <label> Email: </label>
+        <input type="text" name="email">
+        <label> Assunto: </label>
+        <input type="text" name="assunto">
+        <label> Descrição: </label>
+        <input type="text" name="descricao">
+        <button type="submit" value="enviar">
+            <p class="enviar">Enviar</p>
+        </button>
     </form>
 </div>
 
